# mealie-mcp

./: .env.example  Dockerfile  docker-compose.yaml  pyproject.toml
.github/workflows/: docker.yaml
src/mealie_mcp/: __init__.py  client.py  server.py
