[project]
name = "mealie-mcp"
version = "0.1.0"
description = "MCP server for Mealie recipe and meal planning management"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Martin Hempstock"}
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
mealie-mcp = "mealie_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mealie_mcp"]
